# catkin_ws

./: README.md  WindowsInstallInstructions.md  fixHeading.bash  installer.sh  setupMOD3.bash
code_snipets/: code_snippits.py  example_alg.py
gazebo-launch/: CMakeLists.txt  frames.txt  package.xml
gazebo-launch/include/: leddar_transform_node.h
gazebo-launch/launch/: dual_ekf_navsat.launch  gazebo.launch
gazebo-launch/params/: dual_ekf_navsat.yaml
gazebo-launch/src/: leddar_transform_node.cpp  useful_functions.py
gazebo-launch/worlds/: world_with_rover.world
gazebo_plugins/hector_gazebo_plugins/: .gitignore  CMakeLists.txt
phidgets_drivers/: .gitlab-ci.yml
phidgets_drivers/phidgets_drivers/: package.xml
qset_math/: package.xml
ros-gazebo/: .gitignore  README.md  avoidance_test.py  controler.py
ros-gazebo/plugins/: CMakeLists.txt  LeddarPlugin.hh  gps_plugin.cc  gps_plugin.hh  leddar_plugin.cc  rover_plugin.cc  ultrasonic_plugin.cpp  ultrasonic_plugin.h  wheelSpeed.h
ros-gazebo/rover_real_model/: model.config  model.sdf
ros-gazebo/ultrasonic/: model.config  model.sdf
ros-tf-transforms/: CMakeLists.txt  package.xml
ros-tf-transforms/launch/: tf_gazebo_transforms.launch
ros-tf-transforms/src/: NED_to_EDU_node.cpp  all_arm_to_main_transform_node.cpp  camera_to_main_transform_node.cpp  gps_repub.cpp  leddar_to_main_transform_node.cpp
ros_sabertooth/: .gitlab-ci.yml  CMakeLists.txt  package.xml
ros_sabertooth/src/: sabertoothWrite.cpp  serialWriter.cpp
simulation/: package.xml
wheel-control/: .gitlab-ci.yml  CMakeLists.txt  package.xml
(+9 files in other folders)
